--- a/Views/Journals/New.cshtml
+++ b/Views/Journals/New.cshtml
@@ -12,7 +12,7 @@
         <div class="container h-100 align-content-center align-items-center">
 
             <div class="row d-flex justify-content-center align-items-center h-100">
-                <div class="col-lg-12 col-xl-11">
+                
                     <div class="card text-black align-content-center align-items-center" style="border-radius: 25px;">
                         <div class="card-body p-md-5">
                             <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Adaugare Intrare Jurnal </p>
@@ -21,49 +21,52 @@
 
                                 @using (Html.BeginForm(actionName: "New", controllerName: "Journals"))
                                 {
+                                    @Html.ValidationSummary("", new { @class = "text-danger" })
+                                   
+
+                                    <div class="form-group">
+
+                                        @Html.Label("Title", "Titlu", new { @class = "col-md-10 d-flex flex-row align-items-center  mb-4 control-label" })
+
+                                        <div class="col-md-12 d-flex flex-row align-items-center mb-4">
+
+                                            @Html.TextBoxFor(m => m.Title, new { @class = "form-control" })
+                                        </div>
+                                    </div>
+                                    <div class="form-group invisible">
+                                        @Html.LabelFor(m => m.UserId, new { @class = "col-md-10 d-flex flex-row align-items-center  mb-4 control-label" })
+                                        <div class="col-md-12 d-flex flex-row align-items-center mb-4">
+                                            @Html.TextBoxFor(m => m.UserId, new { @value = ViewBag.user, @readonly = "readonly", @visibility = "hidden" })
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+
+                                        @Html.Label("Description", "Descriere", new { @class = "col-md-10 d-flex flex-row align-items-center  mb-4 control-label" })
+
+
+                                        <div class="col-md-12 d-flex flex-row align-items-center mb-4">
+
+                                            @Html.TextAreaFor(m => m.Description, new { @class = "form-control" })
+
+
+                                        </div>
+                                    </div>
                                     <div class="align-items-center align-content-center">
-                                        <div class="form-group">
+                                        <div class="form-group invisible">
                                             @Html.LabelFor(m => m.Date, new { @class = "col-md-10 d-flex flex-row align-items-center  mb-4 control-label" })
-                                            <div class="col-md-10 d-flex flex-row align-items-center mb-4">
-                                                @Html.TextBoxFor(m => m.Date, new { @value = DateTime.Now, @readonly = "readonly", @visibility="hidden" })
+                                            <div class="col-md-12 d-flex flex-row align-items-center mb-4">
+                                                @Html.TextBoxFor(m => m.Date, new { @value = DateTime.Now, @readonly = "readonly", @visibility = "hidden" })
                                             </div>
                                         </div>
 
-                                        <div class="form-group">
-                                            @Html.LabelFor(m => m.UserId, new { @class = "col-md-10 d-flex flex-row align-items-center  mb-4 control-label" })
-                                            <div class="col-md-10 d-flex flex-row align-items-center mb-4">
-                                                @Html.TextBoxFor(m => m.UserId, new { @value = ViewBag.user, @readonly = "readonly", @visibility = "hidden" })
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
-
-                                            @Html.Label("Title", "Titlu", new { @class = "col-md-10 d-flex flex-row align-items-center  mb-4 control-label" })
-
-                                            <div class="col-md-10 d-flex flex-row align-items-center mb-4">
-
-                                                @Html.TextBoxFor(m => m.Title, new { @class = "form-control" })
-                                            </div>
-                                        </div>
-
-                                        <div class="form-group">
-
-                                            @Html.Label("Description", "Descriere", new { @class = "col-md-10 d-flex flex-row align-items-center  mb-4 control-label" })
-
-
-                                            <div class="col-md-10 d-flex flex-row align-items-center mb-4">
-
-                                                @Html.TextAreaFor(m => m.Description, new { @class = "form-control" })
-
-
-                                            </div>
-                                        </div>
 
                                         <div class="form-group">
 
                                             @Html.Label("Simptoms", "Simptome", new { @class = "col-md-10 d-flex flex-row align-items-center  mb-4 control-label" })
 
 
-                                            <div class="col-md-10 d-flex flex-row align-items-center mb-4">
+                                            <div class="col-md-12 d-flex flex-row align-items-center mb-4">
 
                                                 @Html.TextBoxFor(m => m.Simptoms, new { @class = "form-control" })
 
@@ -80,7 +83,7 @@
                                             <div class="row mb-4">
                                                 <div class="col d-flex justify-content-center">
 
-                                                    <div class="col-md-10 d-flex flex-row align-items-center mb-4">
+                                                    <div class="col-md-12 d-flex flex-row align-items-center mb-4">
 
                                                         <button class="btn btn-sm btn-outline-success" type="submit">
                                                             Adauga Intrarea de Jurnal
@@ -92,18 +95,13 @@
                                     </div>
                                 }
 
-                                @*<div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
-
-                                        <img src="https://media.istockphoto.com/vectors/red-pin-location-with-hospital-icon-inside-vector-illustration-vector-id1394152100?b=1&k=20&m=1394152100&s=170667a&w=0&h=JHQDCuZwi_wVy6c1h5t5kCwsu8Q81vNk_9B7OaZy3V0="
-                                             class="img-fluid" alt="Sample image" />
-
-                                    </div>*@
+                                
 
 
                             </div>
                         </div>
                     </div>
-                </div>
+                
             </div>
         </div>
 
