--- a/Views/LocationDepartments/Index.cshtml
+++ b/Views/LocationDepartments/Index.cshtml
@@ -7,12 +7,12 @@
     <section class="vh-100">
         <br />
         <br />
-        <div class="input-group rounded d-flex flex-row-reverse">
+        @*<div class="input-group rounded d-flex flex-row-reverse">
             <input type="text" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" value="@ViewBag.SearchString" />
             <span class="input-group-text border-0" id="search-addon">
                 <i class="fas fa-search"></i>
             </span>
-        </div>
+        </div>*@
         <div class="container h-100 align-content-center align-items-center" style="border-radius: 15px;">
             
 
