--- a/Views/Locations/New.cshtml
+++ b/Views/Locations/New.cshtml
@@ -46,7 +46,7 @@
                                             </div>
                                         </div>
 
-                                        <div class="form-group">
+                                        @*<div class="form-group invisible">
 
                                             @Html.Label("Latitude", "Latitudine", new { @class = "col-md-10 d-flex flex-row align-items-center  mb-4 control-label" })
 
@@ -59,7 +59,7 @@
                                             </div>
                                         </div>
 
-                                        <div class="form-group">
+                                        <div class="form-group invisible">
 
                                             @Html.Label("Longitude", "Longitudine", new { @class = "col-md-10 d-flex flex-row align-items-center  mb-4 control-label" })
 
@@ -70,7 +70,7 @@
 
 
                                             </div>
-                                        </div>
+                                        </div>*@
 
 
 
