--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -64,6 +64,9 @@
                             <a class="nav-link" href="/Doctors/Index">Doctori</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="/LocationDepartments/Index">Cabinete</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="/Investigations/Index">Investigatii</a>
                         </li>
 
